static/styles.css
.img-thumbnail {
	width: 200px;
	height: 200px;
}

.category-label {
	font-size: 2em;
}

a:hover {
    text-decoration: none;
    color: red;
    transition: all .2s ease-in-out;
}

#left-offset {
	margin-left: -2rem;
}

.light-blue:hover {
	color: #00d4ff;
	transition: all .3s ease-in-out;
}

.red:hover {
	color: #ff0000;
	transition: all .3s ease-in-out;
}

/* Breakpoint to adjust spacing for small devices */
@media (max-width: 374px) {
	#left-offset {
		margin-left: 0rem;
	}

	.navbar * {
		font-size: 0.8rem;
	}

	.blankout {
		display: none;
	}
}

